--- a/EconHist-Assignment1.html
+++ b/EconHist-Assignment1.html
@@ -1706,16 +1706,16 @@ head(dta3) #The dataset seems to corresponds to the exemple given.</code></pre>
 <div id="in-an-ideal-world-what-should-x_s-be-if-were-interested-in-the-wealth-channel-of-the-crash" class="section level3">
 <h3>5. In an ideal world, what should <span class="math inline">\(x_s\)</span> be if we’re interested in the wealth
 channel of the crash?</h3>
-<p>The <span class="math inline">\(x_s\)</span> should capture the
-impact of the exposure to the stock market crash at the state level on
-all the wealth of the households, being an appropriate measure of the
-exogenous variation in stock market exposure. But such exposure is
-difficult to measure, which is also why we use state-level data here.
-This variable would need to reflect the pre-crash financial exposure of
-each state in a way that captures potential heterogeneous treatment
-effects from the crash, but is also exogenous to consumption trends.
-There must be pre-treatment exogeneity; <span class="math inline">\(x_s\)</span> must reflect exposure before the
-crash.</p>
+<p>The <span class="math inline">\(x_s\)</span> should capture the the
+exposure to the stock market crash at the state level on all the wealth
+of the households, being an appropriate measure of the exogenous
+variation in stock market exposure. But such exposure is difficult to
+measure, which is also why we use state-level data here. This variable
+would need to reflect the pre-crash financial exposure of each state in
+a way that captures potential heterogeneous treatment effects from the
+crash, but is also exogenous to consumption trends. There must be
+pre-treatment exogeneity; <span class="math inline">\(x_s\)</span> must
+reflect exposure before the crash.</p>
 </div>
 <div id="construct-x_s-and-explain-the-idea-behind-this-measure" class="section level3">
 <h3>6. Construct <span class="math inline">\(x_s\)</span> and explain
@@ -1741,9 +1741,9 @@ understand the impact of the stock market crash on consumption.</p>
 </div>
 <div id="explain-the-idea-behind-the-regression." class="section level3">
 <h3>7. Explain the idea behind the regression.</h3>
-<pre><code>What are the identification concerns.</code></pre>
-<p>Reg (1): studies effect of stock market crash on consumption at state
-level by using state-level car sales as a proxy.</p>
+</div>
+<div id="what-are-the-identification-concerns" class="section level3">
+<h3>What are the identification concerns?</h3>
 <p>The idea behind this regression is to study the effect of a stock
 market crash on the way market exposure affected consumption, using an
 interaction term, while controlling for both state and time
@@ -1761,14 +1761,15 @@ enables to examine whether the relationship between the target parameter
 (consumption) and the independent variable (exposure to the stock
 market) changes with the stock market crash thanks to the dummy <span class="math inline">\(D_t\)</span>. Here, beta coefficient is the
 difference in slope between exposure before and after the crash. In
-terms of interpretation, if the coefficient is different from zero, then
-we can assume the crash had an impact on the way exposure of to the
-stock market affected consumption. A time fixed-effect is added to
-control for potential time trends, while the state fixed-effect should
-control for potential characteristics that are specific to states, that
-we do not observe. These fixed-effects are designed to eliminate omitted
-variable bias by excluding unobserved variables that evolve over time or
-are specific to some states but are constant across entities.</p>
+terms of interpretation, if the coefficient is different from zero and
+statistically significant, then we can assume the crash had an impact on
+the way exposure of to the stock market affected consumption. A time
+fixed-effect is added to control for potential time trends, while the
+state fixed-effect should control for potential characteristics that are
+specific to states, that we do not observe. These fixed-effects are
+designed to eliminate omitted variable bias by excluding unobserved
+variables that evolve over time or are specific to some states but are
+constant across entities.</p>
 <p>There might be several identification concerns regarding this
 regression. First, we know that the income data come from federal tax
 returns at a time when only a small fraction of the population paid
@@ -1794,7 +1795,7 @@ evasion.</p>
   mutate (log_car = log(car_sales)) %&gt;% #create a variable for the log of car sales
   mutate (time = as.Date(paste(year, as.numeric(month), &quot;01&quot;, sep = &quot;-&quot;))) #
 
-#We use two regression methods:
+#We use two regression methods to check our results:
 reg8_felm = felm(log_car ~ x*crash | time + state, data = dta8)</code></pre>
 <pre><code>## Warning in chol.default(mat, pivot = TRUE, tol = tol): the matrix is either
 ## rank-deficient or not positive definite</code></pre>
@@ -1836,22 +1837,123 @@ reg8_felm = felm(log_car ~ x*crash | time + state, data = dta8)</code></pre>
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
 ## RMSE: 0.341664     Adj. R2: 0.929697
 ##                  Within R2: 0.012311</code></pre>
-<p>#Present and explain your results</p>
+<p><span class="math inline">\(\beta x_s D_t\)</span> captures the
+interaction effect between the state’s exposure to the stock market
+(<span class="math inline">\(x_s), and whether or not the crash happened
+(\)</span>D_t<span class="math inline">\() on consumption
+(\)</span>y_{st}). <span class="math inline">\(\beta\)</span> mesures
+whether the effect of state’s exposure to the stock market on
+consumption (measured with the log of car sales) changes with the crash.
+Here we find the same coefficient across both regression such that <span class="math inline">\(\beta = 1.311\)</span>. We could interprete it as:
+the effect of exposure to the stock market on car consumption would have
+increased after the stock market crash. However, we get from reg8_feols
+that our coefficient is not statistically significant, which prevents us
+from concluding that the crash had any effect on consumption through the
+wealth channel described in Chodorow-Reich et al. (2021). For
+comparison, in Temin (1976), the author found there was an actual effect
+of the crash and drop in consumers’ spendings but that it was fairly
+small.</p>
+<p>Note there are no coefficients on exposure (<span class="math inline">\(x_s\)</span>) and whether or not the crash
+happened (crash). As indicated in <span class="math inline">\(summary(re8_feols)\)</span>, both variables are
+removed because of collinearity. We can assume they were removed by
+controlling the fixed-effect. Indeed, <span class="math inline">\(x_s\)</span> stays constant across each state
+while <span class="math inline">\(D_t\)</span> affects all states
+uniformly across time.</p>
 </div>
 <div id="assuming-our-measure-of-exposure-to-the-stock-market-is-the-right-one" class="section level3">
 <h3>9. Assuming our measure of exposure to the stock market is the right
 one,</h3>
-<pre><code>would regression (1) be appropriate to capture the wealth channel of the crash?
-Would it capture the uncertainty channel that Romer writes about?</code></pre>
-<p>#Reg (1) appropriate to capture wealth channel?</p>
-<p>#capture uncertainty channel (Romer)</p>
 </div>
+<div id="would-regression-1-be-appropriate-to-capture-the-wealth-channel-of-the-crash" class="section level1">
+<h1>would regression (1) be appropriate to capture the wealth channel of
+the crash?</h1>
+</div>
+<div id="would-it-capture-the-uncertainty-channel-that-romer-writes-about" class="section level1">
+<h1>Would it capture the uncertainty channel that Romer writes
+about?</h1>
+<p>The wealth channel refers to the effect of the crash on households’
+wealth, which in turn affects consumption. Assuming our measure of
+exposure is the right one and if consider we car sales (a durable good)
+to be a good proxy for consumption, we might think this regression is
+appropriate to capture the wealth channel of the crash, keeping in mind
+we operate at the state level. However, it is still difficult to
+disentengle the fall in consumption due to wealth exposure to the stock
+market and to uncertainty. Indeed, as described in Chodorow-Reich et
+al. (2021), the main challenge when studying the wealth channel is that
+stock prices are forward-looking. As a result, agents might decide to
+cut spendings not because of wealth destruction but because they
+anticipate a “negative stock return and a subsequent decline in
+household spending and employment.” In this case, an initial fall in
+stock prices might worsen expectations due to uncertainty on future
+wealth/income, causing agents to consume less. Romer describes the
+uncertainty channel as the immediate drop in consumer spending caused by
+a temporary increase in income uncertainty. According to this
+uncertainty hypothesis, there should be a “inverse relationship between
+consumer spending on durable goods” (here cars) “and uncertainty about
+future income”. Thus, this regression would not fully capture Romer’s
+uncertainty channel since it is not direcly tied to the loss of wealth
+but rather the agents’ behavior in an uncertain environment. Some of it
+might be reflected in the interaction term since states with greater
+exposure might react more in this setting, but it is not specifically
+designed to measure this channel.</p>
 <div id="potential-problem-of-income-data-coming-from-federal-tax-returns" class="section level3">
 <h3>10. Potential problem of income data coming from federal tax
 returns:</h3>
+<p>As we mentioned earlier, having only 5% of the population paying
+federal income tax in this period might create a strong selection bias,
+as those paying these taxes might not be representative of the average
+american consumer. In Temin (1976), the wealth effect is estimated to be
+fairly small, one pf the reason being that stock prices only represented
+a small fraction of total wealth (and was more likely to be detained by
+richer households). Here we might overestimate the fraction of wealth
+tied to the stock market.</p>
 </div>
 <div id="bonus-variant-of-1" class="section level3">
 <h3>11. BONUS: variant of (1)</h3>
+<pre class="r"><code>dta11 &lt;- dta8 %&gt;%
+  mutate(
+    # Create a month-year string for easier handling (e.g., &quot;1929-01&quot;, &quot;1930-12&quot;)
+    month_year = paste(year, sprintf(&quot;%02d&quot;, month), sep = &quot;-&quot;)
+  ) %&gt;%
+  filter(month_year != &quot;1929-10&quot;) %&gt;%  # Remove October 1929
+  mutate(MD = as.factor(month_year))
+
+reg11 &lt;- feols(log_car ~ x * MD | time + state, data = dta11)</code></pre>
+<pre><code>## The variables &#39;x&#39;, &#39;MD1929-02&#39;, &#39;MD1929-03&#39;, &#39;MD1929-04&#39;, &#39;MD1929-05&#39;, &#39;MD1929-06&#39; and 17 others have been removed because of collinearity (see $collin.var).</code></pre>
+<pre class="r"><code>summary(reg11)</code></pre>
+<pre><code>## OLS estimation, Dep. Var.: log_car
+## Observations: 1,150
+## Fixed-effects: time: 23,  state: 50
+## Standard-errors: Clustered (time) 
+##             Estimate Std. Error      t value  Pr(&gt;|t|)    
+## x:MD1929-02  4.32837   1.68e-12 2.581588e+12 &lt; 2.2e-16 ***
+## x:MD1929-03  5.82082   1.68e-12 3.471146e+12 &lt; 2.2e-16 ***
+## x:MD1929-04  5.64018   1.68e-12 3.363424e+12 &lt; 2.2e-16 ***
+## x:MD1929-05  5.85288   1.68e-12 3.489831e+12 &lt; 2.2e-16 ***
+## x:MD1929-06  6.09580   1.68e-12 3.634306e+12 &lt; 2.2e-16 ***
+## x:MD1929-07  4.33729   1.68e-12 2.586785e+12 &lt; 2.2e-16 ***
+## x:MD1929-08  4.63594   1.68e-12 2.764657e+12 &lt; 2.2e-16 ***
+## x:MD1929-09  3.69847   1.68e-12 2.205728e+12 &lt; 2.2e-16 ***
+## x:MD1929-11  4.20607   1.68e-12 2.508390e+12 &lt; 2.2e-16 ***
+## x:MD1929-12  4.07257   1.68e-12 2.428809e+12 &lt; 2.2e-16 ***
+## x:MD1930-01  2.17068   1.68e-12 1.294830e+12 &lt; 2.2e-16 ***
+## x:MD1930-02  4.24085   1.68e-12 2.528928e+12 &lt; 2.2e-16 ***
+## x:MD1930-03  6.02415   1.68e-12 3.590958e+12 &lt; 2.2e-16 ***
+## x:MD1930-04  6.79714   1.68e-12 4.050947e+12 &lt; 2.2e-16 ***
+## x:MD1930-05  6.80321   1.68e-12 4.054593e+12 &lt; 2.2e-16 ***
+## x:MD1930-06  7.33231   1.68e-12 4.369530e+12 &lt; 2.2e-16 ***
+## x:MD1930-07  5.38056   1.68e-12 3.207721e+12 &lt; 2.2e-16 ***
+## x:MD1930-08  6.45259   1.68e-12 3.845600e+12 &lt; 2.2e-16 ***
+## x:MD1930-09  6.44232   1.68e-12 3.839433e+12 &lt; 2.2e-16 ***
+## x:MD1930-10  5.57472   1.68e-12 3.323558e+12 &lt; 2.2e-16 ***
+## x:MD1930-11  6.50894   1.68e-12 3.879511e+12 &lt; 2.2e-16 ***
+## x:MD1930-12  7.29900   1.68e-12 4.349272e+12 &lt; 2.2e-16 ***
+## ... 23 variables were removed because of collinearity (x, MD1929-02 and 21 others [full set in $collin.var])
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
+## RMSE: 0.329442     Adj. R2: 0.93369 
+##                  Within R2: 0.083159</code></pre>
+</div>
 </div>
 
 
