--- a/EconHist-Assignment1.html
+++ b/EconHist-Assignment1.html
@@ -1706,16 +1706,16 @@ head(dta3) #The dataset seems to corresponds to the exemple given.</code></pre>
 <div id="in-an-ideal-world-what-should-x_s-be-if-were-interested-in-the-wealth-channel-of-the-crash" class="section level3">
 <h3>5. In an ideal world, what should <span class="math inline">\(x_s\)</span> be if we’re interested in the wealth
 channel of the crash?</h3>
-<p>The <span class="math inline">\(x_s\)</span> should capture the the
-exposure to the stock market crash at the state level on all the wealth
-of the households, being an appropriate measure of the exogenous
-variation in stock market exposure. But such exposure is difficult to
-measure, which is also why we use state-level data here. This variable
-would need to reflect the pre-crash financial exposure of each state in
-a way that captures potential heterogeneous treatment effects from the
-crash, but is also exogenous to consumption trends. There must be
-pre-treatment exogeneity; <span class="math inline">\(x_s\)</span> must
-reflect exposure before the crash.</p>
+<p>Ideally, <span class="math inline">\(x_s\)</span> could be the
+fraction of all wealth tied to the stock market and its fluctuations per
+hstate. This would allow us to estimate the exposure of wealth to the
+stock market fluctuations, and then study the impact of the crash on
+consumption through this “wealth channel”. This way, the <span class="math inline">\(x_s\)</span> would be an appropriate measure of
+the exogenous variation in stock market exposure. Note that having data
+at the household level might be more relevant if we want to observe the
+consumption of the representative american household (state level
+aggregate data might overestimate the size of stock market wealth in
+their portfolio).</p>
 </div>
 <div id="construct-x_s-and-explain-the-idea-behind-this-measure" class="section level3">
 <h3>6. Construct <span class="math inline">\(x_s\)</span> and explain
