--- a/EconHist-Assignment1.html
+++ b/EconHist-Assignment1.html
@@ -1626,7 +1626,7 @@ display: none;
 </div>
 
 
-<p>Packages and Environment</p>
+<p>###Packages and Environment</p>
 <pre class="r"><code>library(openxlsx)
 library(tidyr)
 library(dplyr)</code></pre>
@@ -1708,7 +1708,7 @@ head(dta3) #The dataset seems to corresponds to the exemple given.</code></pre>
 channel of the crash?</h3>
 <p>Ideally, <span class="math inline">\(x_s\)</span> could be the
 fraction of all wealth tied to the stock market and its fluctuations per
-hstate. This would allow us to estimate the exposure of wealth to the
+state. This would allow us to estimate the exposure of wealth to the
 stock market fluctuations, and then study the impact of the crash on
 consumption through this “wealth channel”. This way, the <span class="math inline">\(x_s\)</span> would be an appropriate measure of
 the exogenous variation in stock market exposure. Note that having data
