--- a/EconHist-Assignment1.html
+++ b/EconHist-Assignment1.html
@@ -1713,7 +1713,7 @@ stock market fluctuations, and then study the impact of the crash on
 consumption through this “wealth channel”. This way, the <span class="math inline">\(x_s\)</span> would be an appropriate measure of
 the exogenous variation in stock market exposure. Note that having data
 at the household level might be more relevant if we want to observe the
-consumption of the representative american household (state level
+consumption of the representative American household (state level
 aggregate data might overestimate the size of stock market wealth in
 their portfolio).</p>
 </div>
@@ -1774,19 +1774,23 @@ constant across entities.</p>
 regression. First, we know that the income data come from federal tax
 returns at a time when only a small fraction of the population paid
 federal income tax. Thus, our sample would not be representative of the
-population (the representative american consumer) and we would face a
+population (the representative American consumer) and we would face a
 selection bias. Secondly, we have to consider possible issues related to
 our proxy; there could have been changes in car sales associated with
 neither the crash nor the exposure to income, creating a potential
-ommitted variable bias. Thirdly, the wealth channel we observe might
-have a problem of endogeneity. As mentioned in Chodorow-Reich et
-al. (2021), stock prices are forward looking. This would mean that if
-agents anticipate a fall decline in future economic fundamentals, it
-lead to a fall in stock returns and spendings. In this case, the initial
-decrease in consumption could worsen the anticipations and further
-decrease dividends. Finally, measurement errors can always be a concern,
-there might have been mistakes during tax filings and fiscal
-evasion.</p>
+ommitted variable bias. Moreover, if car sales work effectively as good
+proxy, we must assume that the decline in consumption during the Great
+Depression is strongly correlated with the decline in car sales such
+that the wealth effect is the only channel through which the crash would
+have affected car sales (exclusion restriction). Thirdly, the wealth
+channel we observe might have a problem of endogeneity. As mentioned in
+Chodorow-Reich et al. (2021), stock prices are forward looking. This
+would mean that if agents anticipate a fall decline in future economic
+fundamentals, it lead to a fall in stock returns and spendings. In this
+case, the initial decrease in consumption could worsen the anticipations
+and further decrease dividends. Finally, measurement errors can always
+be a concern, there might have been mistakes during tax filings and
+fiscal evasion.</p>
 </div>
 <div id="regression-1" class="section level3">
 <h3>8. Regression (1)</h3>
@@ -1847,12 +1851,12 @@ log of car sales) changes with the crash. Here we find the same
 coefficient across both regression such that <span class="math inline">\(\beta = 1.311\)</span>. We could interprete it as:
 the effect of exposure to the stock market on car consumption would have
 increased after the stock market crash. However, we get from reg8_feols
-that our coefficient is not statistically significant, which prevents us
-from concluding that the crash had any effect on consumption through the
-wealth channel described in Chodorow-Reich et al. (2021). For
-comparison, in Temin (1976), the author found there was an actual effect
-of the crash and drop in consumers’ spendings but that it was fairly
-small.</p>
+that our coefficient is not statistically significant, thus our first
+results might not be robust, which prevents us from concluding that the
+crash had any effect on consumption through the wealth channel described
+in Chodorow-Reich et al. (2021). For comparison, in Temin (1976), the
+author found there was an actual effect of the crash and drop in
+consumers’ spendings but that it was fairly small.</p>
 <p>Note there are no coefficients on exposure (<span class="math inline">\(x_s\)</span>) and whether or not the crash
 happened (crash). As indicated in summary(reg8_feols), both variables
 are removed because of collinearity. We can assume they were removed by
@@ -1877,7 +1881,7 @@ exposure is the right one and if consider we car sales (a durable good)
 to be a good proxy for consumption, we might think this regression is
 appropriate to capture the wealth channel of the crash, keeping in mind
 we operate at the state level. However, it is still difficult to
-disentengle the fall in consumption due to wealth exposure to the stock
+disentangle the fall in consumption due to wealth exposure to the stock
 market and to uncertainty. Indeed, as described in Chodorow-Reich et
 al. (2021), the main challenge when studying the wealth channel is that
 stock prices are forward-looking. As a result, agents might decide to
@@ -1903,11 +1907,17 @@ returns:</h3>
 <p>As we mentioned earlier, having only 5% of the population paying
 federal income tax in this period might create a strong selection bias,
 as those paying these taxes might not be representative of the average
-american consumer. In Temin (1976), the wealth effect is estimated to be
+American consumer. In Temin (1976), the wealth effect is estimated to be
 fairly small, one pf the reason being that stock prices only represented
 a small fraction of total wealth (and was more likely to be detained by
 richer households). Here we might overestimate the fraction of wealth
 tied to the stock market.</p>
+<p>However, we might nuance our problem by mentioning the fact that high
+incomes might have been more likely to report earnings accurately, which
+are also households more likely to own stock. Thus, while not
+representative of the population, the sample could still be appropriate
+for investigating an asset-based wealth channel when focusing on those
+who own these assets.</p>
 </div>
 <div id="bonus-variant-of-1" class="section level3">
 <h3>11. BONUS: variant of (1)</h3>
@@ -1954,6 +1964,7 @@ reg11 &lt;- feols(log_car ~ x * MD | time + state, data = dta11)</code></pre>
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
 ## RMSE: 0.329442     Adj. R2: 0.93369 
 ##                  Within R2: 0.083159</code></pre>
+<p>On</p>
 </div>
 
 
